--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,17 @@ edition = "2021"
 
 [dependencies]
 axum = "0.5.16"
-utoipa = "2"
-utoipa-swagger-ui = "2"
+anyhow = "1"
+
+utoipa = {version="2", features=["axum_extras"]}
+utoipa-swagger-ui = {version="2", features=["axum"]}
+
 postgrest = "1.3.1"
 dotenvy = "0.15.6"
 
 tokio = {version="1", features=["full"]}
 serde = {version = "1", features = ["derive"]}
 serde_json = {version = "1"}
+
+tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
